--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -195,4 +195,21 @@
 
   </div>
 
+<script>
+    jQuery('#projectTabs a').click(function (e) {
+        e.preventDefault();
+        jQuery(this).tab('show');
+    });
+
+    // store the currently selected tab in the hash value
+    jQuery("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
+        var id = jQuery(e.target).attr("href").substr(1);
+        window.location.hash = id;
+    });
+
+    // on load of the page: switch to the currently selected tab
+    var hash = window.location.hash;
+    jQuery('#projectTabs a[href="' + hash + '"]').tab('show');
+</script>
+
 <% end %>
