--- a/app/views/settings/emailsettings/index.html.erb
+++ b/app/views/settings/emailsettings/index.html.erb
@@ -100,6 +100,13 @@
       </p>
 
       <div class="control-group">
+        <%= label_tag :testemail, "Test email to", :class => "control-label", :for => "domain" %>
+        <div class="controls">
+          <%= text_field_tag :testemail, @testemail, :id => "testemail" %>
+        </div>
+      </div>
+
+      <div class="control-group">
         <div class="control-label"></div>
         <div class="controls">
           <button type="submit" class="btn btn-large btn-primary" >Send</button>
