--- a/app/views/shared/_dialog_dependency_badge.html.erb
+++ b/app/views/shared/_dialog_dependency_badge.html.erb
@@ -51,9 +51,13 @@
     <script type="text/javascript">
       image_url = document.URL.split("?")[0] + "/badge.svg?style=flat";
       url       = document.URL.split("?")[0]
-      <% if @product %>
+      <% if @product && !@product.version.to_s.empty? %>
         image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version) ) %>" + ".svg";
         url = "<%= package_version_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version)) %>";
+      <% end %>
+      <% if @product && @product.version.to_s.empty? %>
+        image_url = "<%= product_badge_url(:lang => @product.language_esc, :key => @product.to_param ) %>" + ".svg";
+        url = "<%= products_url( :lang => @product.language_esc, :key => @product.to_param ) %>";
       <% end %>
 
       markdown_url = "[![Dependency Status](" + image_url + ")](" + url + ")";
