--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -12,6 +12,7 @@
     <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
     <hr/>
     <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path %></li>
+    <li><%= link_to 'Satis Repository'   , settings_satis_path %></li>
     <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <hr/>
     <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path %></li>
