--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -35,6 +35,10 @@
   margin-top: 50px;
 }
 
+.l_margin_top_75{
+  margin-top: 75px;
+}
+
 .l_margin_bottom_5{
   margin-bottom: 5px;
 }
@@ -54,4 +58,8 @@
 .l_padding_vert_7{
   padding-top: 7px;
   padding-bottom: 7px;
+}
+
+.l_padding_right_5{
+  padding-right: 5px;
 }
