--- a/app/views/layouts/_footer_enterprise_content.html.erb
+++ b/app/views/layouts/_footer_enterprise_content.html.erb
@@ -2,15 +2,13 @@
 
   <div class="container row footer_link_row_1" >
     <%= link_to t(:page_footer_about), about_path %> |
-    <a href="JavaScript: load_dialog_feedback()">Feedback</a> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">VersionEye Blog</a> |
     <a href="/api" >API</a>
   </div>
 
   <div class="container row footer_link_row_3" >
     <%= link_to "Imprint", imprint_path %> |
-    <%= link_to "Conditions of Use", terms_path %> |
-    <%= link_to "Data protection provisions ", dataprivacy_path %> |
+    <%= link_to "Enterprise Agreements", enterprise_agreements_path %> |
     <%= link_to "Disclaimer", disclaimer_path %>
   </div>
 
