--- a/app/views/lotteries/_signup_form.html.erb
+++ b/app/views/lotteries/_signup_form.html.erb
@@ -3,7 +3,7 @@
   <div class="form-group">
     <label for="user_fullname" class="col-lg-2 control-label">Name</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id = "user_fullname" name="user[fullname]" placeholder="Fullname">
+      <input type="text" class="form-control" id="user_fullname" name="user[fullname]" placeholder="Fullname">
     </div>
   </div>
   <div class="form-group">
@@ -23,8 +23,8 @@
     <label for="user_password" class="col-lg-2 control-label"></label>
     <div class="col-lg-10">
       <div class = "checkbox">
-         <input name="user[terms]" type="hidden" value="0">
-        <input type ="checkbox"  id =  "user_terms" name = "user[terms]" style = "vertical-align: top; margin-right: 5px;" >
+        <input name="user[terms]" type="hidden" value="0">
+        <input type ="checkbox"  id="user_terms" name="user[terms]" class="l_padding_right_5" >
         <label for="terms" style="display: inline; font-size: 12px;">
           <%= t(:terms_part_1) %>
           <% if I18n.locale == :de %>
