--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -3,10 +3,11 @@
 <ul class = "nav nav-pills nav-stacked">
 
   <% if signed_in_admin? %>
+    <li><%= link_to 'Activation'         , settings_activation_path %></li>
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
     <li><%= link_to 'Global Settings'    , settings_globalsettings_path %></li>
     <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path %></li>
-    <li><%= link_to 'Email Addresses'   , settings_emails_path %></li>
+    <li><%= link_to 'Email Addresses'    , settings_emails_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
     <li><%= link_to 'Connect'            , settings_connect_path %></li>
     <li><%= link_to 'License Whitelists' , settings_license_whitelists_path %></li>
