Refactor the edit product page

--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -121,7 +121,7 @@
 
 </div>
 
-<% if signed_in_admin? %>
+<% if maintainer?( @product ) %>
   <div  >
     <%= link_to 'edit', product_edit_path %>
   </div>
