--- a/app/views/products/edit_licenses.html
+++ b/app/views/products/edit_licenses.html
@@ -6,7 +6,7 @@
 <div class="span8" >
 
   <div class="row content_header_def" >
-    Edit <%= @product.name %>
+    Edit <b><%= @product.name %></b>
   </div>
 
   <div class="span8 content" >
