--- a/app/views/products/_product_show_npm.html.erb
+++ b/app/views/products/_product_show_npm.html.erb
@@ -15,6 +15,7 @@
   <%= render 'products/helpers/follow' %>
   <%= render 'products/helpers/kpis' %>
   <%= render 'products/helpers/share' %>
+  <%= render 'products/product_show_authors' %>
   <%= render 'products/product_show_followers' %>
   <%= render 'products/product_show_links' %>
   <%= render 'products/product_show_twitter_follow' %>
