Fixed #577 Auditlog for LicenseWhitelist

--- a/app/views/settings/license_whitelists/show.html.erb
+++ b/app/views/settings/license_whitelists/show.html.erb
@@ -55,6 +55,12 @@
 
   </div>
 
+  <div class="span8 content" >
+    <% @license_whitelist.auditlogs.each do |audit| %>
+      <%= render :partial => 'shared/auditlog', :locals => {:audit => audit} %>
+    <% end %>
+  </div>
+
 </div>
 
 <script>
