--- a/app/views/products/auditlogs.html.erb
+++ b/app/views/products/auditlogs.html.erb
@@ -13,15 +13,7 @@
 
     <div class="boxContainer">
       <% @product.auditlogs.each do |audit| %>
-        <% user = audit.user %>
-        <b>
-          <%= audit.created_at.strftime("%b %d, %Y - %I:%m %p") %>
-          <% if user %>
-            - <%= link_to user.fullname, user_path(user) %>
-          <% end %>
-        </b> <br/>
-        <%= audit.action %> <br/>
-        <hr/>
+        <%= render :partial => 'shared/auditlog', :locals => {:audit => audit} %>
       <% end %>
     </div>
 
