--- a/app/views/user/projects/helpers/_project_mute_button.html.erb
+++ b/app/views/user/projects/helpers/_project_mute_button.html.erb
@@ -1,16 +1,19 @@
 <% if !signed_in? || dep.nil? || dep.unknown? || (signed_in? && !@project.collaborator?( current_user ) ) %>
   <span>&nbsp;</span>
 <% elsif !dep[:muted] %>
-  <button class = "btn btn-link btn-mini btn-mute-version mute-off"
+  <button id="<%= dep.id.to_s %>_button"
+          class = "btn btn-link btn-mini btn-mute-version mute-off"
           title = "Mute alerts for this version"
           data-project-id = "<%= dep.project[:_id].to_s %>"
           data-dependency-id = "<%= dep[:_id].to_s %>" >
     <i class = "dep-icon icon-volume-up"></i>
   </button>
 <% elsif dep[:muted] %>
-  <button class = "btn btn-link btn-mini btn-mute-version mute-on"
+  <button id="<%= dep.id.to_s %>_button"
+          class = "btn btn-link btn-mini btn-mute-version mute-on"
           title = "Allow notification for this version."
-          data-project-id = "<%= dep.project[:_id].to_s %>" >
+          data-project-id = "<%= dep.project[:_id].to_s %>"
+          data-dependency-id = "<%= dep[:_id].to_s %>" >
     <i class = "dep-icon icon-volume-off"></i>
   </button>
 <% end %>
