--- a/app/views/shared/_dependency_badge.html.erb
+++ b/app/views/shared/_dependency_badge.html.erb
@@ -1,8 +1,8 @@
 
 <% if project.show_dependency_badge? %>
   <%= render 'shared/dialog_dependency_badge' %>
-  <a href="#dialog_dependency_badge" id="show_dep_badge_window" role="button" data-toggle="modal">
-    <img id="dependency_badge" src="#" alt="Dependency Badge" />
+  <a href="#dialog_dependency_badge" id="show_dep_badge_window" role="button" data-toggle="modal" rel="nofollow" rel="nofollow" >
+    <img id="dependency_badge" src="#" alt="Dependency Badge" rel="nofollow" />
   </a>
   <script type="text/javascript">
     element = document.getElementById("dependency_badge");
