--- a/app/views/shared/_ref_badge.html.erb
+++ b/app/views/shared/_ref_badge.html.erb
@@ -1,6 +1,6 @@
 
   <%= render 'shared/dialog_ref_badge' %>
-  <a href="#dialog_ref_badge" id="show_ref_badge_window" role="button" data-toggle="modal">
+  <a href="#dialog_ref_badge" id="show_ref_badge_window" role="button" data-toggle="modal" rel="nofollow" >
     <img id="reference_badge" src="#" alt="Reference Badge" />
   </a>
   <script type="text/javascript">
