--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -1,23 +1,23 @@
 <div class="navi nav-tabs nav-stacked"  >
   <% if signed_in? %>
   <ul class = "nav nav-pills nav-stacked">
-    <li><%= link_to 'My Projects', user_projects_path, id: 'my_projects' %></li>
-    <li><%= link_to 'Shared with me', user_collaborations_path %></li>
+    <li><%= link_to 'My Projects', user_projects_path, id: 'my_projects', :rel => "nofollow" %></li>
+    <li><%= link_to 'Shared with me', user_collaborations_path, :rel => "nofollow" %></li>
     <li><hr/></li>
     <% if github_enabled? %>
-      <li><%= link_to 'Create From GitHub', user_projects_github_repositories_path %></li>
+      <li><%= link_to 'Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
     <% end %>
     <% if bitbucket_enabled? %>
-      <li><%= link_to 'Create From Bitbucket', user_projects_bitbucket_repositories_path %></li>
+      <li><%= link_to 'Create From Bitbucket', user_projects_bitbucket_repositories_path, :rel => "nofollow" %></li>
     <% end %>
     <% if stash_enabled? %>
-      <li><%= link_to 'Create From Stash', user_projects_stash_repositories_path %></li>
+      <li><%= link_to 'Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
     <% end %>
-    <li><%= link_to 'Create From URL', new_user_project_path %></li>
-    <li><%= link_to 'Create From Upload', user_prjects_upload_path %></li>
+    <li><%= link_to 'Create From URL', new_user_project_path, :rel => "nofollow" %></li>
+    <li><%= link_to 'Create From Upload', user_prjects_upload_path, :rel => "nofollow" %></li>
     <li><hr/></li>
-    <li><%= link_to 'Most used packages', :controller => 'user/packages', :action => 'popular_in_my_projects'  %> </li>
-    <li><%= link_to 'Packages I follow',  :controller => 'user/packages', :action => 'i_follow' %></li>
+    <li><%= link_to 'Most used packages', :controller => 'user/packages', :action => 'popular_in_my_projects', :rel => "nofollow"  %> </li>
+    <li><%= link_to 'Packages I follow',  :controller => 'user/packages', :action => 'i_follow', :rel => "nofollow" %></li>
 </ul>
   <% else %>
     <%= render '/shared/github_ad' %>
