--- a/app/views/user/collaborations/helpers/_project.html.erb
+++ b/app/views/user/collaborations/helpers/_project.html.erb
@@ -1,16 +1,19 @@
-<div class="row search-item" >
-  <div class="icon56 span2 pull-left">
+<tr>
+  <td>
     <% prog_lang = Product.encode_language(project[:language]) %>
     <span class = "icon_<%= prog_lang || 'default' %> on" ></span>
-  </div>
-  <div class = "span5">
+  </td>
+  <td>
     <%= link_to project.name, user_project_path(project), class: 'searchResultLink' %><br/>
-    <span class="meta-text-small">
-      <%= render partial: "user/collaborations/helpers/project_numbers_sentence", locals: { :project => project } %>
-    </span>
-  </div>
-  <div class = "span3">
     <% collaboration = ProjectCollaborator.by_user(current_user).where(project_id: project[:_id].to_s).shift %>
     <%= render partial: "user/collaborations/helpers/collaborator_controls", locals: {project: project, collaboration: collaboration} %>
-  </div>
-</div>
+  </td>
+  <td>
+    <span style="color: <%= outdated_color(project) %>; font-size: 14px; font-weight: bold;" >
+      <%= project.out_number %>
+    </span>
+  </td>
+  <td>
+    <span style="color: <%= unknown_color(project)%>; font-weight: bold; font-size: 14px;" ><%= project.unknown_number %></span>
+  </td>
+</tr>
