--- a/app/views/user/projects/_collaborator.html.erb
+++ b/app/views/user/projects/_collaborator.html.erb
@@ -16,7 +16,7 @@
         </p>
       <% else %>
         <p>
-          User with email(<small> <%= collaborator[:invitation_email] %> </small>) doesn't exist. Please invite him/her!
+          User (<small> <%= collaborator[:invitation_email] %> </small>) doesn't exist. Invitation send out!
         <p>
       <% end %>
     </div>
