--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -115,7 +115,7 @@
           <li>
             <a data-target="#licenses" data-toggle="tab" onclick="page_view('ga_project_licenses')"><i class = "icon-tasks">&nbsp;</i>Licenses</a>
           </li>
-          <% if signed_in? && @project.collaborator?( current_user ) %>
+          <% if signed_in? && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
             <li>
               <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "icon-group">&nbsp;</i>Collaborators</a>
             </li>
